--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".Denuncias_main"
+            android:exported="false" />
+        <activity
             android:name=".Detenidos_info"
             android:exported="false" />
         <activity
