--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
-
+        <activity
+            android:name=".activity_recuperacion_credenciales_mail_verificacion"
+            android:exported="false" />
+        <activity
+            android:name=".RegistroVerificarCorreoParte2"
+            android:exported="false" />
         <activity
             android:name=".Denuncias_agregar"
             android:exported="false" />
